--- a/work2/synthetic.ipynb
+++ b/work2/synthetic.ipynb
@@ -12,21 +12,21 @@
     "from sklearn.model_selection import cross_validate, StratifiedKFold\n",
     "\n",
     "from tools.distance import ManhattanDistance\n",
-    "from tools.voting import InverseDistanceWeightedVote\n",
+    "from tools.voting import InverseDistanceWeightedVote, ShepardsWorkVote\n",
     "from tools.knn import KNNClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean: 0.9339999999999999\n",
-      "Std: 0.037999999999999985\n"
+      "Mean: 0.858\n",
+      "Std: 0.02400000000000002\n"
      ]
     }
    ],
@@ -44,9 +44,9 @@
     "\n",
     "cv = StratifiedKFold(n_splits=10)\n",
     "knn = KNNClassifier(\n",
-    "    k=1,\n",
+    "    k=5,\n",
     "    distance_func=ManhattanDistance(),\n",
-    "    voting_func=InverseDistanceWeightedVote(),\n",
+    "    voting_func=ShepardsWorkVote(),\n",
     "    weights=np.ones(X.shape[1]),\n",
     ")\n",
     "results = cross_validate(knn, X, y, cv=cv, scoring=\"accuracy\")\n",
