--- a/work2/mushroom.ipynb
+++ b/work2/mushroom.ipynb
@@ -10,9 +10,10 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import cross_validate, PredefinedSplit\n",
+    "import itertools\n",
     "\n",
     "from tools.preprocess import load_datasets, preprocess_mushrooms_datasets\n",
     "from tools.distance import ManhattanDistance, EuclideanDistance\n",
@@ -477,23 +478,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Functions for running and cross-validating KNN"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_knn(knn, train_df, test_df):\n",
+    "    knn.fit(train_df.drop(\"class\", axis=1), train_df[\"class\"])\n",
+    "    preds = knn.predict(test_df.drop(\"class\", axis=1))\n",
+    "    actuals = test_df[\"class\"]\n",
+    "    return (preds, actuals)\n",
+    "\n",
+    "def cross_validate_knn(knn, train_dfs, test_dfs):\n",
+    "    accuracy_scores = []\n",
+    "    for train_df, test_df in zip(train_dfs, test_dfs):\n",
+    "        preds, actuals = run_knn(knn, train_df, test_df)\n",
+    "        accuracy_scores.append(accuracy_score(actuals, preds))\n",
+    "    return np.array(accuracy_scores)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       1.00      1.00      1.00       422\n",
-      "           1       1.00      1.00      1.00       392\n",
-      "\n",
-      "    accuracy                           1.00       814\n",
-      "   macro avg       1.00      1.00      1.00       814\n",
-      "weighted avg       1.00      1.00      1.00       814\n",
-      "\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 7\u001b[0m\n\u001b[1;32m      1\u001b[0m knn \u001b[38;5;241m=\u001b[39m KNNClassifier(\n\u001b[1;32m      2\u001b[0m     k\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m,\n\u001b[1;32m      3\u001b[0m     distance_func\u001b[38;5;241m=\u001b[39mManhattanDistance(),\n\u001b[1;32m      4\u001b[0m     voting_func\u001b[38;5;241m=\u001b[39mShepardsWorkVote(),\n\u001b[1;32m      5\u001b[0m     weights\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mones(\u001b[38;5;28mlen\u001b[39m(train_dfs[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mcolumns) \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m),\n\u001b[1;32m      6\u001b[0m )\n\u001b[0;32m----> 7\u001b[0m \u001b[43mcross_validate_knn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mknn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_dfs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_dfs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[4], line 10\u001b[0m, in \u001b[0;36mcross_validate_knn\u001b[0;34m(knn, train_dfs, test_dfs)\u001b[0m\n\u001b[1;32m      8\u001b[0m accuracy_scores \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m train_df, test_df \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(train_dfs, test_dfs):\n\u001b[0;32m---> 10\u001b[0m     preds, actuals \u001b[38;5;241m=\u001b[39m \u001b[43mrun_knn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mknn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_df\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m     accuracy_scores\u001b[38;5;241m.\u001b[39mappend(accuracy_score(actuals, preds))\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray(accuracy_scores)\n",
+      "Cell \u001b[0;32mIn[4], line 3\u001b[0m, in \u001b[0;36mrun_knn\u001b[0;34m(knn, train_df, test_df)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mrun_knn\u001b[39m(knn, train_df, test_df):\n\u001b[1;32m      2\u001b[0m     knn\u001b[38;5;241m.\u001b[39mfit(train_df\u001b[38;5;241m.\u001b[39mdrop(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mclass\u001b[39m\u001b[38;5;124m\"\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m), train_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mclass\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m----> 3\u001b[0m     preds \u001b[38;5;241m=\u001b[39m \u001b[43mknn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdrop\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mclass\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m     actuals \u001b[38;5;241m=\u001b[39m test_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mclass\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m (preds, actuals)\n",
+      "File \u001b[0;32m~/src/MAI/iml/work2/tools/knn.py:55\u001b[0m, in \u001b[0;36mKNNClassifier.predict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m     53\u001b[0m predictions \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     54\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray(X):\n\u001b[0;32m---> 55\u001b[0m     distances \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdistance_func(x_train, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mweights \u001b[38;5;241m*\u001b[39m x) \u001b[38;5;28;01mfor\u001b[39;00m x_train \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mX_train]\n\u001b[1;32m     56\u001b[0m     distances_and_classes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mzip\u001b[39m(distances, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39my_train))\n\u001b[1;32m     57\u001b[0m     sorted_distances_and_classes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(\n\u001b[1;32m     58\u001b[0m         distances_and_classes, key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mlambda\u001b[39;00m dis_and_cls: dis_and_cls[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     59\u001b[0m     )\n",
+      "File \u001b[0;32m~/src/MAI/iml/work2/tools/knn.py:55\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     53\u001b[0m predictions \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     54\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray(X):\n\u001b[0;32m---> 55\u001b[0m     distances \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdistance_func\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mweights\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m x_train \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mX_train]\n\u001b[1;32m     56\u001b[0m     distances_and_classes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mzip\u001b[39m(distances, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39my_train))\n\u001b[1;32m     57\u001b[0m     sorted_distances_and_classes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(\n\u001b[1;32m     58\u001b[0m         distances_and_classes, key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mlambda\u001b[39;00m dis_and_cls: dis_and_cls[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     59\u001b[0m     )\n",
+      "File \u001b[0;32m~/src/MAI/iml/work2/tools/distance.py:19\u001b[0m, in \u001b[0;36mManhattanDistance.__call__\u001b[0;34m(self, row1, row2)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, row1: np\u001b[38;5;241m.\u001b[39mndarray[np\u001b[38;5;241m.\u001b[39mnumber], row2: np\u001b[38;5;241m.\u001b[39mndarray[np\u001b[38;5;241m.\u001b[39mnumber]) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m np\u001b[38;5;241m.\u001b[39mnumber:\n\u001b[1;32m     16\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;124;03m    Calculates the Manhattan distance between two rows.\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 19\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39msum(np\u001b[38;5;241m.\u001b[39mabs(\u001b[43mrow1\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mrow2\u001b[49m))\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -504,11 +533,59 @@
     "    voting_func=ShepardsWorkVote(),\n",
     "    weights=np.ones(len(train_dfs[0].columns) - 1),\n",
     ")\n",
-    "knn.fit(train_dfs[0].drop(\"class\", axis=1), train_dfs[0][\"class\"])\n",
-    "preds = knn.predict(test_dfs[0].drop(\"class\", axis=1))\n",
-    "actuals = test_dfs[0][\"class\"]\n",
+    "cross_validate_knn(knn, train_dfs, test_dfs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'mean'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 28\u001b[0m\n\u001b[1;32m     17\u001b[0m     knn \u001b[38;5;241m=\u001b[39m KNNClassifier(\n\u001b[1;32m     18\u001b[0m         k\u001b[38;5;241m=\u001b[39mk,\n\u001b[1;32m     19\u001b[0m         distance_func\u001b[38;5;241m=\u001b[39mdistance_func,\n\u001b[1;32m     20\u001b[0m         voting_func\u001b[38;5;241m=\u001b[39mvoting_func,\n\u001b[1;32m     21\u001b[0m         weights\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mones(\u001b[38;5;28mlen\u001b[39m(train_dfs[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mcolumns) \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m),\n\u001b[1;32m     22\u001b[0m     )\n\u001b[1;32m     23\u001b[0m     scores \u001b[38;5;241m=\u001b[39m cross_validate_knn(knn, train_dfs, test_dfs)\n\u001b[1;32m     24\u001b[0m     results\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;28mlen\u001b[39m(results)] \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m     25\u001b[0m         k,\n\u001b[1;32m     26\u001b[0m         distance_func\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m,\n\u001b[1;32m     27\u001b[0m         voting_func\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m,\n\u001b[0;32m---> 28\u001b[0m         \u001b[43mscores\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmean\u001b[49m(),\n\u001b[1;32m     29\u001b[0m         scores\u001b[38;5;241m.\u001b[39mstd(),\n\u001b[1;32m     30\u001b[0m     ]\n\u001b[1;32m     32\u001b[0m results\u001b[38;5;241m.\u001b[39msort_values(by\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maccuracy_mean\u001b[39m\u001b[38;5;124m\"\u001b[39m, ascending\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'mean'"
+     ]
+    }
+   ],
+   "source": [
+    "k_values = [1, 3, 5, 7]\n",
+    "distance_funcs = [ManhattanDistance(), EuclideanDistance()]\n",
+    "voting_funcs = [MajorityClassVote(), InverseDistanceWeightedVote(), ShepardsWorkVote()]\n",
     "\n",
-    "print(classification_report(actuals, preds))"
+    "results = pd.DataFrame(\n",
+    "    columns=[\n",
+    "        \"k\",\n",
+    "        \"distance_func\",\n",
+    "        \"voting_func\",\n",
+    "        \"accuracy_mean\",\n",
+    "        \"accuracy_std\",\n",
+    "    ]\n",
+    ")\n",
+    "for k, distance_func, voting_func in itertools.product(\n",
+    "    k_values, distance_funcs, voting_funcs\n",
+    "):\n",
+    "    knn = KNNClassifier(\n",
+    "        k=k,\n",
+    "        distance_func=distance_func,\n",
+    "        voting_func=voting_func,\n",
+    "        weights=np.ones(len(train_dfs[0].columns) - 1),\n",
+    "    )\n",
+    "    scores = cross_validate_knn(knn, train_dfs, test_dfs)\n",
+    "    results.loc[len(results)] = [\n",
+    "        k,\n",
+    "        distance_func.__class__.__name__,\n",
+    "        voting_func.__class__.__name__,\n",
+    "        scores.mean(),\n",
+    "        scores.std(),\n",
+    "    ]\n",
+    "\n",
+    "results.sort_values(by=\"accuracy_mean\", ascending=False)"
    ]
   },
   {
@@ -520,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
