--- a/work2/mushroom.ipynb
+++ b/work2/mushroom.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from importlib import reload\n",
-    "import preprocess\n",
+    "import work2.tools.preprocess as preprocess\n",
     "\n",
     "reload(preprocess)\n",
     "\n",
-    "from preprocess import load_datasets, preprocess_mushrooms_datasets\n",
+    "from work2.tools.preprocess import load_datasets, preprocess_mushrooms_datasets\n",
     "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "[7313 rows x 23 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
