--- a/work2/hepatitis.ipynb
+++ b/work2/hepatitis.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from importlib import reload\n",
-    "import work2.tools.preprocess as preprocess\n",
+    "import tools.preprocess as preprocess\n",
+    "import tools.knn as knn\n",
     "\n",
     "reload(preprocess)\n",
+    "reload(knn)\n",
     "\n",
-    "from work2.tools.preprocess import load_datasets, preprocess_hepatitis_datasets\n",
-    "import pandas as pd"
+    "from tools.preprocess import load_datasets, preprocess_hepatitis_datasets\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -265,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +615,7 @@
        "[141 rows x 20 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +662,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,6 +672,98 @@
     "pd.concat(test_dfs + train_dfs).isnull().sum()\n",
     "\n",
     "# No missing values, therefore simple imputer was successful."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Score: 0.8369458128078817\n",
+      "Best Params: {'k': 1, 'distance_func': 'ManhattanDistance', 'voting_func': 'MajorityClassVote', 'weights': 'Equal'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from tools.knn import KNNClassifier\n",
+    "from tools.distance import EuclideanDistance, ManhattanDistance, MahalanobisDistance\n",
+    "from tools.voting import InverseDistanceWeightedVote, MajorityClassVote, ShepardsWorkVote\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "# Test different k values\n",
+    "k_values = [1, 3, 5, 7]\n",
+    "\n",
+    "# Covariance matrix for Mahalanobis Distance\n",
+    "covariance_matrix = np.cov(train_dfs[0].drop(columns=['class']).to_numpy(), rowvar=False)\n",
+    "\n",
+    "distance_functions = [\n",
+    "    ManhattanDistance(),  \n",
+    "    EuclideanDistance(),\n",
+    "    MahalanobisDistance(covariance_matrix)\n",
+    "]\n",
+    "\n",
+    "# Test different voting schemes\n",
+    "voting_schemes = [\n",
+    "    MajorityClassVote(),\n",
+    "    InverseDistanceWeightedVote(),\n",
+    "    ShepardsWorkVote()\n",
+    "]\n",
+    "\n",
+    "# TODO: Implement different weightings\n",
+    "weights_list = [\n",
+    "    None,  # Equal weight\n",
+    "]\n",
+    "\n",
+    "# Equal weighting for now\n",
+    "sample_weighting = np.ones(len(train_dfs[0].columns) - 1)\n",
+    "\n",
+    "# Track best score and corresponding params that achieved that score\n",
+    "best_score = 0\n",
+    "best_params = {}\n",
+    "\n",
+    "X_train = train_dfs[0].drop(columns=['Class']).to_numpy()  # Drop the class column (target variable)\n",
+    "y_train = train_dfs[0]['Class'].to_numpy()  # The class column is the target variable\n",
+    "\n",
+    "X_test = test_dfs[0].drop(columns=['Class']).to_numpy()  # Same for test set\n",
+    "y_test = test_dfs[0]['Class'].to_numpy()  # The class column in the test set\n",
+    "\n",
+    "# Loop through combinations and test each combination\n",
+    "for k in k_values:\n",
+    "    for distance_func in distance_functions:\n",
+    "        for voting_func in voting_schemes:\n",
+    "            for weights in weights_list:\n",
+    "                knn = KNNClassifier(k = k,\n",
+    "                                    distance_func = distance_func,\n",
+    "                                    voting_func = voting_func,\n",
+    "                                    weights = sample_weighting\n",
+    "                                    )\n",
+    "\n",
+    "                scores = cross_val_score(knn,\n",
+    "                                         X_train,\n",
+    "                                         y_train, \n",
+    "                                         v=5,\n",
+    "                                         scoring='accuracy'\n",
+    "                                         )\n",
+    "                \n",
+    "                avg_score = np.mean(scores)\n",
+    "\n",
+    "                if avg_score > best_score:\n",
+    "                    best_score = avg_score\n",
+    "                    best_params = {\n",
+    "                        'k': k,\n",
+    "                        'distance_func': distance_func.__class__.__name__,\n",
+    "                        'voting_func': voting_func.__class__.__name__,\n",
+    "                        'weights': 'Equal' if weights is None else 'Custom'\n",
+    "                    }\n",
+    "\n",
+    "# Print the best combination of parameters\n",
+    "print(f\"Best Score: {best_score}\")\n",
+    "print(f\"Best Params: {best_params}\")"
    ]
   }
  ],
