Fixed pre-processing of hepatitis categorical data

--- a/work2/hepatitis.ipynb
+++ b/work2/hepatitis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "4           85.0  20.0      4.0    100.0     b'no'  b'LIVE'  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -232,17 +232,17 @@
       "text/plain": [
        "AGE                  0\n",
        "SEX                  0\n",
-       "STEROID              0\n",
+       "STEROID             10\n",
        "ANTIVIRALS           0\n",
-       "FATIGUE              0\n",
-       "MALAISE              0\n",
-       "ANOREXIA             0\n",
-       "LIVER_BIG            0\n",
-       "LIVER_FIRM           0\n",
-       "SPLEEN_PALPABLE      0\n",
-       "SPIDERS              0\n",
-       "ASCITES              0\n",
-       "VARICES              0\n",
+       "FATIGUE             10\n",
+       "MALAISE             10\n",
+       "ANOREXIA            10\n",
+       "LIVER_BIG          100\n",
+       "LIVER_FIRM         110\n",
+       "SPLEEN_PALPABLE     50\n",
+       "SPIDERS             50\n",
+       "ASCITES             50\n",
+       "VARICES             50\n",
        "BILIRUBIN           60\n",
        "ALK_PHOSPHATE      290\n",
        "SGOT                40\n",
@@ -253,21 +253,23 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check if there are any missing values in the dfs\n",
-    "pd.concat(test_dfs + train_dfs).isnull().sum()\n",
+    "import numpy as np\n",
+    "\n",
+    "# Combine the test and train dataframes and replace \"?\" entries with NaN and sum up all null values\n",
+    "pd.concat(test_dfs + train_dfs).replace(b'?', np.nan).isnull().sum()\n",
     "\n",
     "# There are missing values, therefore we need to either drop the rows or imputate values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -318,17 +320,17 @@
        "      <th>0</th>\n",
        "      <td>0.436620</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.116883</td>\n",
        "      <td>0.342007</td>\n",
        "      <td>0.003155</td>\n",
@@ -341,17 +343,17 @@
        "      <th>1</th>\n",
        "      <td>0.661972</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.116883</td>\n",
        "      <td>0.219331</td>\n",
        "      <td>0.123028</td>\n",
@@ -364,17 +366,17 @@
        "      <th>2</th>\n",
        "      <td>0.718310</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.142857</td>\n",
        "      <td>0.553903</td>\n",
        "      <td>0.064669</td>\n",
@@ -387,12 +389,12 @@
        "      <th>3</th>\n",
        "      <td>0.225352</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -410,17 +412,17 @@
        "      <th>4</th>\n",
        "      <td>0.338028</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.090909</td>\n",
        "      <td>0.219331</td>\n",
        "      <td>0.009464</td>\n",
@@ -456,17 +458,17 @@
        "      <th>136</th>\n",
        "      <td>0.366197</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.051948</td>\n",
        "      <td>0.137546</td>\n",
        "      <td>0.104101</td>\n",
@@ -479,17 +481,17 @@
        "      <th>137</th>\n",
        "      <td>0.338028</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.051948</td>\n",
        "      <td>0.074349</td>\n",
        "      <td>0.059937</td>\n",
@@ -502,17 +504,17 @@
        "      <th>138</th>\n",
        "      <td>1.000000</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.051948</td>\n",
        "      <td>0.260223</td>\n",
        "      <td>0.028391</td>\n",
@@ -525,17 +527,17 @@
        "      <th>139</th>\n",
        "      <td>0.380282</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.077922</td>\n",
        "      <td>0.256506</td>\n",
        "      <td>0.022082</td>\n",
@@ -548,17 +550,17 @@
        "      <th>140</th>\n",
        "      <td>0.436620</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.051948</td>\n",
        "      <td>0.368030</td>\n",
        "      <td>0.080442</td>\n",
@@ -574,30 +576,30 @@
       ],
       "text/plain": [
        "          AGE  SEX  STEROID  ANTIVIRALS  FATIGUE  MALAISE  ANOREXIA  \\\n",
-       "0    0.436620    0        1           0        2        2         2   \n",
-       "1    0.661972    0        1           0        2        2         1   \n",
-       "2    0.718310    1        2           0        2        1         1   \n",
-       "3    0.225352    0        2           0        1        1         1   \n",
-       "4    0.338028    0        2           0        1        1         1   \n",
+       "0    0.436620    0        0           0        1        1         1   \n",
+       "1    0.661972    0        0           0        1        1         0   \n",
+       "2    0.718310    1        1           0        1        0         0   \n",
+       "3    0.225352    0        1           0        0        0         0   \n",
+       "4    0.338028    0        1           0        0        0         0   \n",
        "..        ...  ...      ...         ...      ...      ...       ...   \n",
-       "136  0.366197    0        1           0        2        2         1   \n",
-       "137  0.338028    0        0           1        1        1         1   \n",
-       "138  1.000000    0        2           0        2        1         1   \n",
-       "139  0.380282    0        2           0        1        1         1   \n",
-       "140  0.436620    0        2           1        2        2         2   \n",
+       "136  0.366197    0        0           0        1        1         0   \n",
+       "137  0.338028    0        1           1        0        0         0   \n",
+       "138  1.000000    0        1           0        1        0         0   \n",
+       "139  0.380282    0        1           0        0        0         0   \n",
+       "140  0.436620    0        1           1        1        1         1   \n",
        "\n",
        "     LIVER_BIG  LIVER_FIRM  SPLEEN_PALPABLE  SPIDERS  ASCITES  VARICES  \\\n",
-       "0            2           2                1        2        2        2   \n",
-       "1            2           1                1        1        2        1   \n",
-       "2            2           2                1        2        1        1   \n",
-       "3            0           0                0        0        0        0   \n",
-       "4            2           1                1        1        1        1   \n",
+       "0            1           1                0        1        1        1   \n",
+       "1            1           0                0        0        1        0   \n",
+       "2            1           1                0        1        0        0   \n",
+       "3            1           0                0        0        0        0   \n",
+       "4            1           0                0        0        0        0   \n",
        "..         ...         ...              ...      ...      ...      ...   \n",
-       "136          2           1                1        1        2        1   \n",
-       "137          2           1                1        1        1        1   \n",
-       "138          2           1                1        1        1        1   \n",
-       "139          2           1                1        1        1        1   \n",
-       "140          2           1                1        2        1        1   \n",
+       "136          1           0                0        0        1        0   \n",
+       "137          1           0                0        0        0        0   \n",
+       "138          1           0                0        0        0        0   \n",
+       "139          1           0                0        0        0        0   \n",
+       "140          1           0                0        1        0        0   \n",
        "\n",
        "     BILIRUBIN  ALK_PHOSPHATE      SGOT   ALBUMIN   PROTIME  HISTOLOGY  Class  \n",
        "0     0.116883       0.342007  0.003155  0.162791  0.607654          1      0  \n",
@@ -615,7 +617,7 @@
        "[141 rows x 20 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +627,7 @@
     "# For this dataset, we need to convert several columns from categorical to numerical values (via Label Encoding) \n",
     "# to ensure all columns are of the same type (numerical). We also need to normalise the numerical columns (via Min-Max Scaling) and\n",
     "# fill in missing entries in the data (via Simple Imputer)\n",
-    "for df in train_dfs + test_dfs:\n",
+    "for df in train_dfs + test_dfs:    \n",
     "    preprocess_hepatitis_datasets(df)\n",
     "\n",
     "train_dfs[0]"
@@ -633,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +664,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
