Implemented weighting schemes for both datasets

--- a/work2/hepatitis.ipynb
+++ b/work2/hepatitis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "4           85.0  20.0      4.0    100.0     b'no'  b'LIVE'  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        "[141 rows x 20 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,15 +678,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Score: 0.8369458128078817\n",
-      "Best Params: {'k': 1, 'distance_func': 'ManhattanDistance', 'voting_func': 'MajorityClassVote', 'weights': 'Equal'}\n"
+      "Testing combination: k=1, distance_func=ManhattanDistance, voting_func=MajorityClassVote, weights=Equal\n",
+      "Testing combination: k=1, distance_func=ManhattanDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=1, distance_func=ManhattanDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=1, distance_func=ManhattanDistance, voting_func=InverseDistanceWeightedVote, weights=Equal\n",
+      "Testing combination: k=1, distance_func=ManhattanDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=1, distance_func=ManhattanDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=1, distance_func=ManhattanDistance, voting_func=ShepardsWorkVote, weights=Equal\n",
+      "Testing combination: k=1, distance_func=ManhattanDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=1, distance_func=ManhattanDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=1, distance_func=EuclideanDistance, voting_func=MajorityClassVote, weights=Equal\n",
+      "Testing combination: k=1, distance_func=EuclideanDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=1, distance_func=EuclideanDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=1, distance_func=EuclideanDistance, voting_func=InverseDistanceWeightedVote, weights=Equal\n",
+      "Testing combination: k=1, distance_func=EuclideanDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=1, distance_func=EuclideanDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=1, distance_func=EuclideanDistance, voting_func=ShepardsWorkVote, weights=Equal\n",
+      "Testing combination: k=1, distance_func=EuclideanDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=1, distance_func=EuclideanDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=1, distance_func=MahalanobisDistance, voting_func=MajorityClassVote, weights=Equal\n",
+      "Testing combination: k=1, distance_func=MahalanobisDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=1, distance_func=MahalanobisDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=1, distance_func=MahalanobisDistance, voting_func=InverseDistanceWeightedVote, weights=Equal\n",
+      "Testing combination: k=1, distance_func=MahalanobisDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=1, distance_func=MahalanobisDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=1, distance_func=MahalanobisDistance, voting_func=ShepardsWorkVote, weights=Equal\n",
+      "Testing combination: k=1, distance_func=MahalanobisDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=1, distance_func=MahalanobisDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=3, distance_func=ManhattanDistance, voting_func=MajorityClassVote, weights=Equal\n",
+      "Testing combination: k=3, distance_func=ManhattanDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=3, distance_func=ManhattanDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=3, distance_func=ManhattanDistance, voting_func=InverseDistanceWeightedVote, weights=Equal\n",
+      "Testing combination: k=3, distance_func=ManhattanDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=3, distance_func=ManhattanDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=3, distance_func=ManhattanDistance, voting_func=ShepardsWorkVote, weights=Equal\n",
+      "Testing combination: k=3, distance_func=ManhattanDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=3, distance_func=ManhattanDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=3, distance_func=EuclideanDistance, voting_func=MajorityClassVote, weights=Equal\n",
+      "Testing combination: k=3, distance_func=EuclideanDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=3, distance_func=EuclideanDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=3, distance_func=EuclideanDistance, voting_func=InverseDistanceWeightedVote, weights=Equal\n",
+      "Testing combination: k=3, distance_func=EuclideanDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=3, distance_func=EuclideanDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=3, distance_func=EuclideanDistance, voting_func=ShepardsWorkVote, weights=Equal\n",
+      "Testing combination: k=3, distance_func=EuclideanDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=3, distance_func=EuclideanDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=3, distance_func=MahalanobisDistance, voting_func=MajorityClassVote, weights=Equal\n",
+      "Testing combination: k=3, distance_func=MahalanobisDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=3, distance_func=MahalanobisDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=3, distance_func=MahalanobisDistance, voting_func=InverseDistanceWeightedVote, weights=Equal\n",
+      "Testing combination: k=3, distance_func=MahalanobisDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=3, distance_func=MahalanobisDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=3, distance_func=MahalanobisDistance, voting_func=ShepardsWorkVote, weights=Equal\n",
+      "Testing combination: k=3, distance_func=MahalanobisDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=3, distance_func=MahalanobisDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=5, distance_func=ManhattanDistance, voting_func=MajorityClassVote, weights=Equal\n",
+      "Testing combination: k=5, distance_func=ManhattanDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=5, distance_func=ManhattanDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=5, distance_func=ManhattanDistance, voting_func=InverseDistanceWeightedVote, weights=Equal\n",
+      "Testing combination: k=5, distance_func=ManhattanDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=5, distance_func=ManhattanDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=5, distance_func=ManhattanDistance, voting_func=ShepardsWorkVote, weights=Equal\n",
+      "Testing combination: k=5, distance_func=ManhattanDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=5, distance_func=ManhattanDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=5, distance_func=EuclideanDistance, voting_func=MajorityClassVote, weights=Equal\n",
+      "Testing combination: k=5, distance_func=EuclideanDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=5, distance_func=EuclideanDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=5, distance_func=EuclideanDistance, voting_func=InverseDistanceWeightedVote, weights=Equal\n",
+      "Testing combination: k=5, distance_func=EuclideanDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=5, distance_func=EuclideanDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=5, distance_func=EuclideanDistance, voting_func=ShepardsWorkVote, weights=Equal\n",
+      "Testing combination: k=5, distance_func=EuclideanDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=5, distance_func=EuclideanDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=5, distance_func=MahalanobisDistance, voting_func=MajorityClassVote, weights=Equal\n",
+      "Testing combination: k=5, distance_func=MahalanobisDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=5, distance_func=MahalanobisDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=5, distance_func=MahalanobisDistance, voting_func=InverseDistanceWeightedVote, weights=Equal\n",
+      "Testing combination: k=5, distance_func=MahalanobisDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=5, distance_func=MahalanobisDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=5, distance_func=MahalanobisDistance, voting_func=ShepardsWorkVote, weights=Equal\n",
+      "Testing combination: k=5, distance_func=MahalanobisDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=5, distance_func=MahalanobisDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=7, distance_func=ManhattanDistance, voting_func=MajorityClassVote, weights=Equal\n",
+      "Testing combination: k=7, distance_func=ManhattanDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=7, distance_func=ManhattanDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=7, distance_func=ManhattanDistance, voting_func=InverseDistanceWeightedVote, weights=Equal\n",
+      "Testing combination: k=7, distance_func=ManhattanDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=7, distance_func=ManhattanDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=7, distance_func=ManhattanDistance, voting_func=ShepardsWorkVote, weights=Equal\n",
+      "Testing combination: k=7, distance_func=ManhattanDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=7, distance_func=ManhattanDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=7, distance_func=EuclideanDistance, voting_func=MajorityClassVote, weights=Equal\n",
+      "Testing combination: k=7, distance_func=EuclideanDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=7, distance_func=EuclideanDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=7, distance_func=EuclideanDistance, voting_func=InverseDistanceWeightedVote, weights=Equal\n",
+      "Testing combination: k=7, distance_func=EuclideanDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=7, distance_func=EuclideanDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=7, distance_func=EuclideanDistance, voting_func=ShepardsWorkVote, weights=Equal\n",
+      "Testing combination: k=7, distance_func=EuclideanDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=7, distance_func=EuclideanDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=7, distance_func=MahalanobisDistance, voting_func=MajorityClassVote, weights=Equal\n",
+      "Testing combination: k=7, distance_func=MahalanobisDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=7, distance_func=MahalanobisDistance, voting_func=MajorityClassVote, weights=Custom\n",
+      "Testing combination: k=7, distance_func=MahalanobisDistance, voting_func=InverseDistanceWeightedVote, weights=Equal\n",
+      "Testing combination: k=7, distance_func=MahalanobisDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=7, distance_func=MahalanobisDistance, voting_func=InverseDistanceWeightedVote, weights=Custom\n",
+      "Testing combination: k=7, distance_func=MahalanobisDistance, voting_func=ShepardsWorkVote, weights=Equal\n",
+      "Testing combination: k=7, distance_func=MahalanobisDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Testing combination: k=7, distance_func=MahalanobisDistance, voting_func=ShepardsWorkVote, weights=Custom\n",
+      "Best Score: 0.844088669950739\n",
+      "Best Params: {'k': 3, 'distance_func': 'MahalanobisDistance', 'voting_func': 'MajorityClassVote', 'weights': 'Equal'}\n",
+      "Test Set Accuracy: 0.7857\n"
      ]
     }
    ],
@@ -696,12 +805,13 @@
     "from tools.distance import EuclideanDistance, ManhattanDistance, MahalanobisDistance\n",
     "from tools.voting import InverseDistanceWeightedVote, MajorityClassVote, ShepardsWorkVote\n",
     "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.feature_selection import mutual_info_classif\n",
+    "from sklearn_relief import ReliefF\n",
     "\n",
-    "# Test different k values\n",
     "k_values = [1, 3, 5, 7]\n",
     "\n",
     "# Covariance matrix for Mahalanobis Distance\n",
-    "covariance_matrix = np.cov(train_dfs[0].drop(columns=['class']).to_numpy(), rowvar=False)\n",
+    "covariance_matrix = np.cov(train_dfs[0].drop(columns=['Class']).to_numpy(), rowvar=False)\n",
     "\n",
     "distance_functions = [\n",
     "    ManhattanDistance(),  \n",
@@ -709,24 +819,11 @@
     "    MahalanobisDistance(covariance_matrix)\n",
     "]\n",
     "\n",
-    "# Test different voting schemes\n",
     "voting_schemes = [\n",
     "    MajorityClassVote(),\n",
     "    InverseDistanceWeightedVote(),\n",
     "    ShepardsWorkVote()\n",
     "]\n",
-    "\n",
-    "# TODO: Implement different weightings\n",
-    "weights_list = [\n",
-    "    None,  # Equal weight\n",
-    "]\n",
-    "\n",
-    "# Equal weighting for now\n",
-    "sample_weighting = np.ones(len(train_dfs[0].columns) - 1)\n",
-    "\n",
-    "# Track best score and corresponding params that achieved that score\n",
-    "best_score = 0\n",
-    "best_params = {}\n",
     "\n",
     "X_train = train_dfs[0].drop(columns=['Class']).to_numpy()  # Drop the class column (target variable)\n",
     "y_train = train_dfs[0]['Class'].to_numpy()  # The class column is the target variable\n",
@@ -734,21 +831,44 @@
     "X_test = test_dfs[0].drop(columns=['Class']).to_numpy()  # Same for test set\n",
     "y_test = test_dfs[0]['Class'].to_numpy()  # The class column in the test set\n",
     "\n",
+    "# Calculate Information Gain (mutual information) for each feature\n",
+    "info_gain_weights = mutual_info_classif(X_train, y_train)\n",
+    "normalized_info_gain_weights = info_gain_weights / np.sum(info_gain_weights)  # Normalize to sum to 1\n",
+    "\n",
+    "# Calculate feature importance using ReliefF\n",
+    "relief = ReliefF()\n",
+    "relief.fit(X_train, y_train)\n",
+    "\n",
+    "relief_weights = relief.w_\n",
+    "normalized_relief_weights = relief_weights / np.sum(relief_weights)  # Normalize to sum to 1\n",
+    "\n",
+    "weights_list = [\n",
+    "    None,  # Equal weight\n",
+    "    normalized_info_gain_weights,  # Information Gain (mutual information)\n",
+    "    normalized_relief_weights  # ReliefF\n",
+    "]\n",
+    "\n",
+    "# Track best score and corresponding params that achieved that score\n",
+    "best_score = 0\n",
+    "best_params = {}\n",
+    "\n",
     "# Loop through combinations and test each combination\n",
     "for k in k_values:\n",
     "    for distance_func in distance_functions:\n",
     "        for voting_func in voting_schemes:\n",
     "            for weights in weights_list:\n",
+    "                print(f\"Testing combination: k={k}, distance_func={distance_func.__class__.__name__}, voting_func={voting_func.__class__.__name__}, weights={'Equal' if weights is None else 'Custom'}\")\n",
+    "\n",
     "                knn = KNNClassifier(k = k,\n",
     "                                    distance_func = distance_func,\n",
     "                                    voting_func = voting_func,\n",
-    "                                    weights = sample_weighting\n",
+    "                                    weights = weights\n",
     "                                    )\n",
     "\n",
     "                scores = cross_val_score(knn,\n",
     "                                         X_train,\n",
     "                                         y_train, \n",
-    "                                         v=5,\n",
+    "                                         cv=5,\n",
     "                                         scoring='accuracy'\n",
     "                                         )\n",
     "                \n",
