--- a/work2/mushroom.ipynb
+++ b/work2/mushroom.ipynb
@@ -691,39 +691,25 @@
     "from tools.distance import EuclideanDistance, ManhattanDistance, MahalanobisDistance\n",
     "from tools.voting import InverseDistanceWeightedVote, MajorityClassVote, ShepardsWorkVote\n",
     "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.feature_selection import mutual_info_classif\n",
+    "from sklearn_relief import ReliefF\n",
     "\n",
-    "\n",
-    "# Test different k values\n",
     "k_values = [1, 3, 5, 7]\n",
     "\n",
     "# Covariance matrix for Mahalanobis Distance\n",
     "covariance_matrix = np.cov(train_dfs[0].drop(columns=['class']).to_numpy(), rowvar=False)\n",
     "\n",
-    "# Test different distance metrics\n",
     "distance_functions = [\n",
     "    ManhattanDistance(),  \n",
     "    EuclideanDistance(),\n",
     "    MahalanobisDistance(covariance_matrix)\n",
     "]\n",
     "\n",
-    "# Test different voting schemes\n",
     "voting_schemes = [\n",
     "    MajorityClassVote(),\n",
     "    InverseDistanceWeightedVote(),\n",
     "    ShepardsWorkVote()\n",
     "]\n",
-    "\n",
-    "# TODO: Implement different weightings\n",
-    "weights_list = [\n",
-    "    None,  # Equal weight\n",
-    "]\n",
-    "\n",
-    "# Equal weighting for now\n",
-    "sample_weighting = np.ones(len(train_dfs[0].columns) - 1)\n",
-    "\n",
-    "# Track best score and corresponding params that achieved that score\n",
-    "best_score = 0\n",
-    "best_params = {}\n",
     "\n",
     "X_train = train_dfs[0].drop(columns=['class']).to_numpy()  # Drop the class column (target variable)\n",
     "y_train = train_dfs[0]['class'].to_numpy()  # The class column is the target variable\n",
@@ -731,21 +717,44 @@
     "X_test = test_dfs[0].drop(columns=['class']).to_numpy()  # Same for test set\n",
     "y_test = test_dfs[0]['class'].to_numpy()  # The class column in the test set\n",
     "\n",
+    "# Calculate Information Gain (mutual information) for each feature\n",
+    "info_gain_weights = mutual_info_classif(X_train, y_train)\n",
+    "normalized_info_gain_weights = info_gain_weights / np.sum(info_gain_weights)  # Normalize to sum to 1\n",
+    "\n",
+    "# Calculate feature importance using ReliefF\n",
+    "relief = ReliefF()\n",
+    "relief.fit(X_train, y_train)\n",
+    "\n",
+    "relief_weights = relief.w_\n",
+    "normalized_relief_weights = relief_weights / np.sum(relief_weights)  # Normalize to sum to 1\n",
+    "\n",
+    "weights_list = [\n",
+    "    None,  # Equal weight\n",
+    "    normalized_info_gain_weights,  # Information Gain (mutual information)\n",
+    "    normalized_relief_weights  # ReliefF\n",
+    "]\n",
+    "\n",
+    "# Track best score and corresponding params that achieved that score\n",
+    "best_score = 0\n",
+    "best_params = {}\n",
+    "\n",
     "# Loop through combinations and test each combination\n",
     "for k in k_values:\n",
     "    for distance_func in distance_functions:\n",
     "        for voting_func in voting_schemes:\n",
     "            for weights in weights_list:\n",
+    "                print(f\"Testing combination: k={k}, distance_func={distance_func.__class__.__name__}, voting_func={voting_func.__class__.__name__}, weights={'Equal' if weights is None else 'Custom'}\")\n",
+    "\n",
     "                knn = KNNClassifier(k = k,\n",
     "                                    distance_func = distance_func,\n",
     "                                    voting_func = voting_func,\n",
-    "                                    weights = sample_weighting\n",
+    "                                    weights = weights\n",
     "                                    )\n",
     "\n",
     "                scores = cross_val_score(knn,\n",
     "                                         X_train,\n",
     "                                         y_train, \n",
-    "                                         v=5,\n",
+    "                                         cv=5,\n",
     "                                         scoring='accuracy'\n",
     "                                         )\n",
     "                \n",
